Some schema fixes, error page, authorize resource